paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.compile.log
error[E0432]: unresolved import `lazy_static`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:1:5
  |
1 | use lazy_static::lazy_static;
  |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`
  |
help: you might be missing a crate named `lazy_static`, add it to your project and import it in your code
  |
1 + extern crate lazy_static;
  |

error[E0425]: cannot find value `I1` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:17:9
   |
17 |     if *I1.borrow() != 1 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `I2` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:20:9
   |
20 |     if *I2.borrow() != 2 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `I3` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:23:9
   |
23 |     if *I3.borrow() != 3 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `I4` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:26:9
   |
26 |     if *I4.borrow() != 0 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `I5` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:29:9
   |
29 |     if *I5.borrow() != 0 {
   |         ^^ not found in this scope

error[E0425]: cannot find value `P_I1` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:32:23
   |
32 |     if !std::ptr::eq(*P_I1, &*I1) {
   |                       ^^^^ not found in this scope

error[E0425]: cannot find value `I1` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:32:31
   |
32 |     if !std::ptr::eq(*P_I1, &*I1) {
   |                               ^^ not found in this scope

error[E0425]: cannot find value `P_I2` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:35:23
   |
35 |     if !std::ptr::eq(*P_I2, &*I2) {
   |                       ^^^^ not found in this scope

error[E0425]: cannot find value `I2` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:35:31
   |
35 |     if !std::ptr::eq(*P_I2, &*I2) {
   |                               ^^ not found in this scope

error[E0425]: cannot find value `P_I4` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:38:23
   |
38 |     if !std::ptr::eq(*P_I4, &*I4) {
   |                       ^^^^ not found in this scope

error[E0425]: cannot find value `I4` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:38:31
   |
38 |     if !std::ptr::eq(*P_I4, &*I4) {
   |                               ^^ not found in this scope

error[E0425]: cannot find value `P_I5` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:41:23
   |
41 |     if !std::ptr::eq(*P_I5, &*I5) {
   |                       ^^^^ not found in this scope

error[E0425]: cannot find value `I5` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:41:31
   |
41 |     if !std::ptr::eq(*P_I5, &*I5) {
   |                               ^^ not found in this scope

error[E0425]: cannot find value `I1` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:44:6
   |
44 |     *I1.borrow_mut() = 10;
   |      ^^ not found in this scope

error[E0425]: cannot find value `I2` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:45:6
   |
45 |     *I2.borrow_mut() = 20;
   |      ^^ not found in this scope

error[E0425]: cannot find value `I4` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:46:6
   |
46 |     *I4.borrow_mut() = 30;
   |      ^^ not found in this scope

error[E0425]: cannot find value `I5` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:47:6
   |
47 |     *I5.borrow_mut() = 40;
   |      ^^ not found in this scope

error[E0425]: cannot find value `P_I1` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:48:9
   |
48 |     if *P_I1.borrow() != 10 {
   |         ^^^^ not found in this scope

error[E0425]: cannot find value `P_I2` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:51:9
   |
51 |     if *P_I2.borrow() != 20 {
   |         ^^^^ not found in this scope

error[E0425]: cannot find value `P_I4` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:54:9
   |
54 |     if *P_I4.borrow() != 30 {
   |         ^^^^ not found in this scope

error[E0425]: cannot find value `P_I5` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:57:9
   |
57 |     if *P_I5.borrow() != 40 {
   |         ^^^^ not found in this scope

warning: unused import: `std::cell::RefCell`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/external_definitions/external_objs_1/sample_005/target.rs:2:5
  |
2 | use std::cell::RefCell;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 22 previous errors; 1 warning emitted

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.